exports[`test should render a default component 1`] = `
<Button
  aria-selected={false}
  className="button-group-button"
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isReversed={false}
  type="button"
  variant="default" />
`;

exports[`test should render as selected 1`] = `
<Button
  aria-selected={true}
  className="button-group-button is-active"
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isReversed={false}
  type="button"
  variant="default" />
`;

exports[`test should render with icon and text 1`] = `
<Button
  aria-selected={false}
  className="button-group-button"
  icon={
    <img
      alt="icon" />
  }
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isReversed={false}
  text="text"
  type="button"
  variant="default" />
`;

exports[`test should render with icon and text reversed 1`] = `
<Button
  aria-selected={false}
  className="button-group-button"
  icon={
    <img
      alt="icon" />
  }
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isReversed={true}
  text="text"
  type="button"
  variant="default" />
`;

exports[`test should render with icon only 1`] = `
<Button
  aria-selected={false}
  className="button-group-button"
  icon={
    <img
      alt="icon" />
  }
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isReversed={false}
  type="button"
  variant="default" />
`;

exports[`test should render with text 1`] = `
<Button
  aria-selected={false}
  className="button-group-button"
  isBlock={false}
  isCompact={false}
  isDisabled={false}
  isReversed={false}
  text="text"
  type="button"
  variant="default" />
`;
